# FOCS-Hackathon-2026-

./: .gitignore  CONTRIBUTING.md  Dockerfile  FINAL_SUBMISSION.md  INSTALL.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  full_setup.md  instructions.md  main.py  presentation.md  pyproject.toml  run-local-demo.sh  setup-demo.sh
.github/workflows/: ci.yml  scan.yml
app/: index.html
data/: feeds.sqlite
demo/: attack_log4shell.py  demo.sh
docs/: ARCHITECTURE.md  BYPASSES.md  CODE_COMMENTS.md  THREAT_MODEL.md
policies/: default.yaml  main-demo.yaml
scanner/: __init__.py  cache.py  diff.py  enrich.py  errors.py  models.py  policy.py  report.py  sbom.py  scorer.py  vuln.py
templates/: report.html
tests/: test_cache_enrich.py  test_diff.py  test_main.py  test_policy.py  test_sbom.py  test_scorer.py  test_vuln.py
tests/fixtures/: baseline_report.json  current_report.json  sample_sbom.json  sample_vulns.json
