[project]
name = "focs-ps15-scanner"
version = "0.1.0"
description = "Container image vulnerability scanner for PS-15 hackathon"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "jinja2>=3.1.4",
  "pyyaml>=6.0.2",
  "rich>=13.9.4",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.2",
  "pytest>=8.3.3",
  "ruff>=0.6.9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scanner*"]
